<resources>
    <string name="app_name">midterm1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="giveAway">Give Away</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Username">Username</string>
    <string name="Adress">Adress</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="profile">Profile</string>
    <string name="category">category</string>
    <string name="search">search</string>
    <string name="upload">upload</string>
    <string name="CreateAccount">Do not have an account? Create one</string>
    <string-array name="categories">
        <item>toys</item>
        <item>jewelry</item>
        <item>clothing</item>
    </string-array>


</resources>