<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/ThemeUserPage"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.UserPage">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/profileBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue_background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TV_profileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="15dp"
            android:background="@color/light_blue_background"
            android:fontFamily="@font/marck_script"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/IV_profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@color/light_blue_background"
            android:src="@drawable/ic_launcher_foreground"
            app:civ_border_color="#00000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/light_blue_background"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        app:boxStrokeColor="@color/focus_lightblue_darkblue"
        android:hint="@string/category"
        app:hintTextColor="@color/blue_text"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileBackground">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/dropdown_categories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:textColor="@color/blue_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_layout"
        android:background="@drawable/btn_light_blue"
        app:backgroundTint="@null"
        android:text="@string/search"
        android:textColor="@color/blue_text"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="90dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_layout"
        android:background="@drawable/btn_light_blue"
        app:backgroundTint="@null"
        android:textColor="@color/blue_text"
        android:text="@string/upload"
        tools:ignore="UnknownId"
        />


    <LinearLayout
        android:id="@+id/user_bio"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:background="#d9d9d9"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="90dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dropdown_layout"
            android:background="@drawable/btn_light_blue"
            app:backgroundTint="@null"
            android:textColor="@color/blue_text"
            android:text="Logout"
            tools:ignore="UnknownId"
            android:layout_marginVertical="50dp"
            android:layout_marginLeft="20dp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>